--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
     bodmer/TFT_eSPI@^2.5.43
     https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
     lvgl/lvgl@9.4.0
+    adafruit/Adafruit NeoPixel@^1.12.0
 build_flags =
     ; --- TFT_eSPI configuration (no User_Setup.h needed) ---
     -D USER_SETUP_LOADED=1
@@ -33,12 +34,16 @@ build_flags =
     -D TFT_CS=10
     -D TFT_DC=8
     -D TFT_RST=9
+    -D USE_HSPI_PORT=1                            ; Use HSPI for TFT on ESP32-S3
     ; --- Touch (XPT2046) ---
     -D TOUCH_CS=14
     -D TOUCH_IRQ=7
     -D TOUCH_XPT2046=1
     ; SD card
     -D SD_CS=4                                    ; SD card chip select pin
+    ; --- NeoPixel RGB LED (built-in on ESP32-S3-DevKitC-1) ---
+    -D NEOPIXEL_PIN=48
+    -D NEOPIXEL_COUNT=1
     ; --- Display options ---
     -D LOAD_GLCD=1
     -D SMOOTH_FONT=1
