--- a/gui/config/settings.json
+++ b/gui/config/settings.json
@@ -2,5 +2,10 @@
     "version": 1,
     "language": 0,
     "bg_color": 1,
-    "brightness": 80
+    "brightness": 80,
+    "servo_protocol": 3,
+    "servo_pwm_min": 900,
+    "servo_pwm_center": 1500,
+    "servo_pwm_max": 2100,
+    "servo_frequency": 50
 }
