--- a/gui/config/settings.json
+++ b/gui/config/settings.json
@@ -7,5 +7,11 @@
     "servo_pwm_min": 1000,
     "servo_pwm_center": 1500,
     "servo_pwm_max": 2000,
-    "servo_frequency": 50
+    "servo_frequency": 50,
+    "servo_pwm_step_0": 10,
+    "servo_pwm_step_1": 10,
+    "servo_pwm_step_2": 10,
+    "servo_pwm_step_3": 10,
+    "servo_pwm_step_4": 10,
+    "servo_pwm_step_5": 10
 }
