Update mkdocs.yml to enable table of contents integration in theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ edit_uri: edit/main/docs/
 theme:
   name: material
   features:
-    - navigation.sections
     - navigation.indexes
+    - toc.integrate
     - content.action.edit
     - search.suggest
     - search.highlight
