--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
     https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
     lvgl/lvgl@9.4.0
     adafruit/Adafruit NeoPixel@^1.12.0
+    adafruit/Adafruit PN532
+    adafruit/Adafruit BusIO
 build_flags =
     ; --- TFT_eSPI configuration (no User_Setup.h needed) ---
     -D USER_SETUP_LOADED=1
@@ -34,7 +36,9 @@ build_flags =
     -D TFT_CS=10
     -D TFT_DC=8
     -D TFT_RST=9
-    -D USE_HSPI_PORT=1                            ; Use HSPI for TFT on ESP32-S3
+    ; Note: Do not force USE_HSPI_PORT on ESP32-S3.
+    ; TFT_eSPI will use the default SPI bus (FSPI) and configure pins via TFT_* defines.
+    ; This keeps the SPI controller shareable with other peripherals (e.g. PN532).
     ; --- Touch (XPT2046) ---
     -D TOUCH_CS=14
     -D TOUCH_IRQ=7
