--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,8 @@ lib_deps =
     https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
     lvgl/lvgl@9.4.0
     adafruit/Adafruit NeoPixel@^1.12.0
-    adafruit/Adafruit PN532
-    adafruit/Adafruit BusIO
+    adafruit/Adafruit PN532@^1.3.1
+    adafruit/Adafruit BusIO@^1.16.1
 build_flags =
     ; --- TFT_eSPI configuration (no User_Setup.h needed) ---
     -D USER_SETUP_LOADED=1
@@ -36,9 +36,7 @@ build_flags =
     -D TFT_CS=10
     -D TFT_DC=8
     -D TFT_RST=9
-    ; Note: Do not force USE_HSPI_PORT on ESP32-S3.
-    ; TFT_eSPI will use the default SPI bus (FSPI) and configure pins via TFT_* defines.
-    ; This keeps the SPI controller shareable with other peripherals (e.g. PN532).
+    -D USE_HSPI_PORT=1                            ; Use HSPI (SPI3) for TFT on ESP32-S3
     ; --- Touch (XPT2046) ---
     -D TOUCH_CS=14
     -D TOUCH_IRQ=7
@@ -48,6 +46,9 @@ build_flags =
     ; --- NeoPixel RGB LED (built-in on ESP32-S3-DevKitC-1) ---
     -D NEOPIXEL_PIN=48
     -D NEOPIXEL_COUNT=1
+    ; --- PN532 NFC (I2C) ---
+    ; -D PN532_I2C_ADDRESS=0x28                     ; HW-147C uses 0x28 instead of standard 0x24
+    ; -D PN532_I2C_ADDRESS=0x24                     ; Elechouse V3 uses 0x24
     ; --- Display options ---
     -D LOAD_GLCD=1
     -D SMOOTH_FONT=1
