Comment out unused SD card chip select pin in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
     -D TOUCH_IRQ=7
     -D TOUCH_XPT2046=1
     ; SD card
-    -D SD_CS=4                                    ; SD card chip select pin
+    ; -D SD_CS=4                                    ; SD card chip select pin (not used)
     ; --- NeoPixel RGB LED (built-in on ESP32-S3-DevKitC-1) ---
     -D NEOPIXEL_PIN=48
     -D NEOPIXEL_COUNT=1
