Add warning for PN532 I2C SDA/SCL swap and implement I2C bus scanning feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,6 +49,7 @@ build_flags =
     ; --- PN532 NFC (I2C) ---
     ; -D PN532_I2C_ADDRESS=0x28                     ; HW-147C uses 0x28 instead of standard 0x24
     ; -D PN532_I2C_ADDRESS=0x24                     ; Elechouse V3 uses 0x24
+    -D PN532_SWAP_I2C=1                             ; 1 = swap SDA/SCL only for PN532
     ; --- Display options ---
     -D LOAD_GLCD=1
     -D SMOOTH_FONT=1
